--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ test:
     - pip check
 
 about:
-  home: https://github.com/pradyunsg/installer
+  home: https://github.com/pypa/installer
   description: |
     This is a low-level library for installing a Python package from a wheel distribution.
     It provides basic functionality and abstractions for handling wheels and installing packages from wheels.
