--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: f3bd36cd261b440a88a1190b1becca0578fee90b4b62decc796932fdd5ae8839
 
 build:
-  skip: True  # [py<38]
+  skip: True  # [py<37]
   number: 0
   script: {{ PYTHON }} -m pip install --no-deps . -vv
 
@@ -43,7 +43,7 @@ about:
   license: MIT
   license_file: LICENSE
   license_family: MIT
-  dev_url: https://installer.pypa.io/en/stable/
+  dev_url: https://installer.pypa.io
   doc_url: https://github.com/pypa/installer/tree/main/docs
 
 extra:
