--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,17 +12,17 @@ source:
   sha256: a26d3e3116289bb08216e0d0f7d925fcef0b0194eedfa0c944bcaaa106c4b631
 
 build:
-  skip: True  # [py<37]
-  number: 0
+  noarch: python
+  number: 1
   script: {{ PYTHON }} -m pip install --no-deps --no-build-isolation . -vv
 
 requirements:
   host:
     - pip
-    - python
+    - python >=3.7
     - flit-core >=3.2.0,<4
   run:
-    - python
+    - python >=3.7
 
 test:
   requires:
